tests/negative/conversions/conversion_invalid_cast.tx
// EXPECTED: COMPILE_ERROR
// Description: Test explicit casting between unrelated types.

class Point { x: int; y: int; }
class Color { r: int; g: int; b: int; }

function main() {
    let p = new Point();
    let c = p as Color; // Error: Cannot cast Point to Color
}
